objects/Candidate__c.object
<CustomObject>
    <description>Candidate information</description>
    <fields>
        <fullName>Background__c</fullName>
        <description>Background of candidate</description>
        <label>Background</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <description>Candidate&apos;s date of birth</description>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Experience__c</fullName>
        <globalPicklist>Experience</globalPicklist>
        <label>Experience</label>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <globalPicklist>Gender</globalPicklist>
        <label>Gender</label>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Short_listed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Short-listed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Skill__c</fullName>
        <description>Candidate&apos;s skill and knowledge</description>
        <label>Skill</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <picklist>
            <picklistValues>
                <fullName>Advertisement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recruitment Web Portal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recruitment Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee Reference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Word-of-mouth referral</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Working_Experience__c</fullName>
        <label>Working Experience</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Candidate</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Candidate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Candidates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Age_greater_than_14</fullName>
        <active>true</active>
        <errorConditionFormula>year(today()) - YEAR(Date_of_Birth__c) &lt; 14</errorConditionFormula>
        <errorMessage>Candidate must be at least 14 years old</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Phone_10_Digit</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(REGEX(  Phone__c , &quot;(\\d){10}&quot;)), NOT(REGEX( Phone__c, &quot;(\\d){11}&quot;)))</errorConditionFormula>
        <errorMessage>Phone must have 10-11 number</errorMessage>
    </validationRules>
</CustomObject>